fix some grammer, spacing, and add link to Oscar's profile

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
 
 blockquote {
   text-align: center;
-  height: 100px;
+  height: 120px;
   width: 400px;
   margin-left: 300px;
 }
